syntax = "proto3";

option java_package = "remotestorage.proto";
option java_outer_classname = "MessagesProtos";

message ClientRequest {
    MessageType type = 1;
    string arg1 = 2;
    string arg2 = 3;
    string arg3 = 4;

    enum MessageType {
        AUTH = 0;
        LS = 1;
        UP = 2;
        DOWN = 3;
        ADD_USER = 4;
        REMOVE_USER = 5;
        CHECK_USER_PROPERTY = 6;
        CHANGE_USER_PROPERTY = 7;
    }
}

message ServerResponse {
    bool ack = 1;
    repeated string args = 2;
    ErrorType error = 3;

    enum ErrorType {
        ALREADY_EXISTS = 0;
        CONNECTION_FAIL = 1;
        NOT_FOUND = 2;
        INVALID_REQUEST = 3;
        OPERATION_FAIL = 4;
        OPERATION_NOT_YET_IMPLEMENTED = 5;
        AUTH_FAIL = 6;
    }
}

message FileTransfer {
    bytes data = 1;
    Type type = 2;

    enum Type {
        CONTINUE = 0;
        LAST = 1;
        ERROR = 2;
    }
}
